<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="box">Box</string>
    <string name="table">Table</string>
    <string name="name">Name:</string>
    <string name="pax">No. Of Pax:</string>
    <string name="phone">Mobile phone:</string>
    <string name="welcome">Welcome to eReservation</string>
    <string name="area">Table area:</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non Smoking</string>
    <string name="picker">Select Date and Time:</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>