<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A3C40"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="820dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="104dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/rectanglebox" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="#EDE6DB"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="185dp"
                    android:layout_height="70dp"
                    android:layout_gravity="bottom|center"
                    app:srcCompat="@drawable/reservation" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#EDE6DB"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Name"
                    android:textColor="#417D7A"
                    android:inputType="textPersonName"
                    android:backgroundTint="#FFFFFF"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pax"
                    android:layout_width="31dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pax"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#EDE6DB"/>

                <EditText
                    android:id="@+id/etPax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:backgroundTint="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="31dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#EDE6DB"/>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="96278172"
                    android:inputType="number"
                    android:backgroundTint="#EDE6DB"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/area"
                    android:layout_width="102dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:text="@string/area"
                    android:textColor="#EDE6DB"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <RadioGroup
                    android:id="@+id/radioGroupArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rbSmoking"
                        android:layout_width="142dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:text="@string/smoking"
                        android:textColor="#EDE6DB" />

                    <RadioButton
                        android:id="@+id/rbNonSmoking"
                        android:layout_width="143dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:text="@string/non_smoking"
                        android:textColor="#EDE6DB" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="366dp">

                    <ImageView
                        android:id="@+id/newbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/newbox" />

                    <TextView
                        android:id="@+id/calender"
                        android:layout_width="193dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/picker"
                        android:textColor="#1D5C63"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <DatePicker
                            android:id="@+id/datePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="169dp"
                            android:layout_gravity="center"
                            android:calendarViewShown="false"
                            android:datePickerMode="spinner" />

                        <TimePicker
                            android:id="@+id/timePicker"
                            android:layout_width="243dp"
                            android:layout_height="142dp"
                            android:layout_gravity="center"
                            android:timePickerMode="spinner" />

                        <LinearLayout
                            android:layout_width="227dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/bConfirm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="0.3dp"
                                android:layout_weight="1"
                                android:text="@string/confirm"
                                android:backgroundTint="#1D5C63"/>

                            <Button
                                android:id="@+id/bReset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/reset"
                                android:backgroundTint="#1D5C63"/>
                        </LinearLayout>


                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>



